feat: admin API
